solc_mutator_ossfuzz_seed_corpus/test_sol/test_8ad12c3c1e1cb8599bfad1a28cbc67eab9b32c75ce92bc5cab0853dde3f76999_278f715cce8b3653b2fe6af2c31c74eb177dcecb_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
}

==== Source: su1.sol ====
contract C1 {
}
function f0(int40 i0,bool i1) 
{
  {


  }
}
function f1(function () external i0,address i1) 
{
  {
f0(-66223475465,(0x55cce609b50cf92d81d3c697e1fd > 0x10a00f1abdcd66dfb4e5a6fcb828));


{



  {
  }

}
f0(10049195555,(true && ((((1897096066555607309877 ^ (-1707028559440598001379 % ((-916496992433779013006 % 1983293503649119665882) & -140758278194231884261))) % 1458966423803887704006) | -2273480029359602770734) == 2186191013518458357555)));
  }




}
// ----
// TypeError 2271: (su1.sol:267-479): Operator == not compatible with types int_const -1218535732125450183170 and int_const 2186191013518458357555
